--- a/styles/Confirm.module.css
+++ b/styles/Confirm.module.css
@@ -11,11 +11,14 @@
 
 .ride_container {
   flex: 1;
-  background-color: #eaeaea;
+  flex-direction: column;
+  color: #2fdb11;
+  
 }
 
 .body {
   background-color: rgb(34, 34, 34);
   color: #2fdb11;
 }
+
 
