--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,14 @@ a {
   margin-top: 3%;
   flex: 1;
 }
+
+.bicycle_list {
+  background-color: black;
+}
+
+.bicycle_container {
+  display: flex;
+  flex-direction: column;
+  flex : 1
+}
+
