--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,37 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 0rem;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  flex: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+ 
+}
+
+.main ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+ 
+}
+.main li {
+  float: right;
+}
+
+.main li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.main li a:hover {
+  background-color: #04AA6D;
 }
 
 .footer {
