--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,24 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 2rem;
+}
+
+.loopp{
+  text-align: center;
+}
+
+.hjk{
+  background-color: #0070f3;
+  border: 1px;
+  color: white;
+  padding: 10px 45px;
+  text-align: center;
+  font-size: 18px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+ 
 }
 
 .footer {
@@ -42,7 +60,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .title,
@@ -54,6 +72,14 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+}
+
+.barr{
+color: #04AA6D;
+font-weight: bold;
+padding: 1rem;
+justify-content: center;
+
 }
 
 .code {
@@ -70,7 +96,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 900px;
 }
 
 .card {
@@ -79,22 +105,57 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid #111111;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  max-width: 800px;
 }
+
+.card ul{
+list-style-type: none;
+margin: 0;
+padding: 2;
+overflow: hidden;
+background-color: rgb(210, 214, 210);
+
+}
+
+.card label{
+ font-weight: bold;
+  
+  }
+
+
+
+.card li{
+float: left;
+
+}
+
+.card li button{
+background-color: #04AA6D;
+display:block;
+color: white;
+text-align: center;
+padding: 5px 12px;
+text-decoration: none;
+font-size: 1.5rem;
+
+}
+
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #131414;
+  border-color: #131314;
 }
 
 .card h2 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
+  color: red;
+  flex: 1;
 }
 
 .card p {
