--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -2,9 +2,10 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  background-color: #f2f2f2;
-  width: 50%;
-  margin-left: 10%;
+  background-color: #979797;
+  /* width: 50%; */
+  /* margin-left: 10%; */
+  border-radius: 20px;
 }
 
 .body{
