--- a/styles/Fuel.module.css
+++ b/styles/Fuel.module.css
@@ -1,11 +1,11 @@
 .body {
   background-color: rgb(34, 34, 34);
-  color: #2fdb11;
-  height: 100vh;
+  color: #04aa6d;
+  
 }
 
 .container {
-  padding: 0 2rem;
+  padding: 0 1rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -13,11 +13,84 @@
 
 .map {
   flex: 1;
+  border: 2px solid #ffffff;
 }
 
 .sub {
   flex: 1;
-  color: #2fdb11;
+  color: #04aa6d;
+}
+
+
+.main {
+  min-height: 100vh;
+  padding: 3rem 1;
+  flex: 0.5;
+  display: flex;
+  flex-direction: column;
+  margin-left: 240px;
+  background-color: rgb(34, 34, 34);
+  color: #ffffff;
+}
+
+.main ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+ 
+}
+.main li {
+  float: right;
+ 
+}
+
+.main li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  
+}
+
+.main li a:hover {
+  background-color: #04AA6D;
+  
+}
+
+.sidenav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+ 
+}
+
+.sidenav {
+  height: 100%;
+  width: 240px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0, 0, 0);
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.sidenav a:hover {
+  background-color: #04AA6D;
 }
 
 
