--- a/styles/Man.module.css
+++ b/styles/Man.module.css
@@ -1,20 +1,18 @@
 .container {
-  padding: 0 2rem;
+  padding: 1 1rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: rgb(34, 34, 34);
 }
+
 .map {
   flex: 1;
+  border: 2px solid #ffffff;
 }
 
 .sub {
-  flex: 1;
-}
-
-.body{
-  background-color: rgb(34, 34, 34);
-  color: #eaeaea;
+  flex: 0.4;
 }
 
 .header{
@@ -24,25 +22,91 @@
 }
 
 
-
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  padding: 3rem 1;
+  flex: 0.5;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-left: 240px;
+  background-color: rgb(34, 34, 34);
+  color: #ffffff;
 }
+
+.main ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+ 
+}
+.main li {
+  float: right;
+ 
+}
+
+.main li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  
+}
+
+.main li a:hover {
+  background-color: #04AA6D;
+  
+}
+
+.sidenav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+ 
+}
+
+
+.sidenav {
+  height: 100%;
+  width: 240px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0, 0, 0);
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.sidenav a:hover {
+  background-color: #04AA6D;
+}
+
+
 
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+  padding: 0.5rem 0;
+  background-color: rgb(34, 34, 34);
+  color: #ffffff;
+  text-align: right;
+  
 }
+
+
 
 .footer a {
   display: flex;
@@ -65,7 +129,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .title,
@@ -105,7 +169,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  max-width: 500px;
 }
 
 .card:hover,
@@ -126,12 +190,9 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
 
-@media (max-width: 600px) {
+
+@media (max-width: 900px) {
   .grid {
     width: 100%;
     flex-direction: column;
