--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,8 +1,9 @@
 .container {
-  padding: 1rem;
+  padding: 0rem;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #979797;
+  background-color: rgb(34, 34, 34);
   /* width: 50%; */
   /* margin-left: 10%; */
   border-radius: 20px;
@@ -11,16 +12,45 @@
 .body{
   background-color: rgb(34, 34, 34);
   color: #f7dede;
-  height: 100vh;
+  
 }
 
+.body h2{
+  text-align: center;
+  
+}
+
+
+
 .title {
-  color: rgb(26, 235, 19);
+  color: #04aa6d;
+  font-weight: bold;
 }
 
 .input {
   width: 100%;
   margin-bottom: 5%;
   border-width: 3px;
+  border-color: black;
+}
+
+.footer {
+  display: flex;
+  flex: 1;
+  padding: 0.5rem 0;
+  
+  background-color: rgb(34, 34, 34);
+  color: #ffffff;
+  text-align: right;
+  
+}
+
+
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
